UHF-6017: Rename jsmenu__drawer as jsmenu

--- a/src/scss/06_components/navigation/global/_jsmenu.scss
+++ b/src/scss/06_components/navigation/global/_jsmenu.scss
@@ -6,7 +6,7 @@ $-jsmenu-active-border: $spacing-quarter;
 $-jsmenu-border: $color-black-20;
 $-transition-duration: 0.2s;
 
-.jsmenu__drawer {
+.jsmenu {
   @include font('body');
   background: $color-silver-light;
   display: none;
