--- a/templates/block/block--mobile-navigation.html.twig
+++ b/templates/block/block--mobile-navigation.html.twig
@@ -79,7 +79,7 @@
           </ul>
         </div>
 
-        <div id="jsmenu" class="jsmenu__drawer">
+        <div id="jsmenu" class="jsmenu">
           <div id="jsmenu__panels" class="jsmenu__panels"/>
         </div>
       </div>
