--- a/templates/navigation/menu--mobile.html.twig
+++ b/templates/navigation/menu--mobile.html.twig
@@ -29,7 +29,7 @@
 
 {% if use_global_navigation %}
 PUUPPAA
-<nav id="jsmenu" class="jsmenu__drawer">
+<nav id="jsmenu" class="jsmenu">
   <div id="jsmenu__panels" class="jsmenu__panels"/>
 </nav>
 
