UHF-6017: Move style handling from js to css

--- a/src/scss/06_components/navigation/global/_jsmenu.scss
+++ b/src/scss/06_components/navigation/global/_jsmenu.scss
@@ -14,6 +14,14 @@ $-transition-duration: 0.2s;
   z-index: 2;
 }
 
+.jsmenu--visible {
+  display: block;
+
+  @include breakpoint($breakpoint-l) {
+    display: none;
+  }
+}
+
 .jsmenu__loading {
   align-items: center;
   display: flex;
@@ -40,7 +48,7 @@ $-transition-duration: 0.2s;
 
 .jsmenu__panel {
   --transition-opacity-delay: #{$-transition-duration}; // Delay hiding the offscreen panels until animation is done
-  background-color: white;
+  background-color: $color-white;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -84,7 +92,7 @@ $-transition-duration: 0.2s;
 
 .jsmenu__button--back {
   align-items: center;
-  background-color: white;
+  background-color: $color-white;
   border: 0;
   display: flex;
   margin: $spacing 0 $spacing-and-half $spacing;
@@ -92,7 +100,7 @@ $-transition-duration: 0.2s;
   position: relative;
 
   & span {
-    background: white;
+    background: $color-white;
     display: inline-block;
     flex-grow: 1;
     height: 100%;
@@ -137,7 +145,7 @@ $-transition-duration: 0.2s;
 }
 
 .jsmenu__items {
-  background-color: white;
+  background-color: $color-white;
   margin: 0;
   margin-top: $spacing;
   padding: 0;
@@ -145,7 +153,7 @@ $-transition-duration: 0.2s;
 
 .jsmenu__item {
   align-items: stretch;
-  background: white;
+  background: $color-white;
   border-top: 1px solid $-jsmenu-border;
   display: flex;
   font-size: var(--jsmenu-font-size);
@@ -155,7 +163,7 @@ $-transition-duration: 0.2s;
 
 .jsmenu__itemlink {
   align-items: center;
-  border-left: $-jsmenu-active-border solid white;
+  border-left: $-jsmenu-active-border solid $color-white;
   display: inline-flex;
   flex-grow: 1;
   padding: $spacing-half 0;
@@ -164,7 +172,7 @@ $-transition-duration: 0.2s;
 }
 
 .jsmenu__itemlink--active {
-  border-color: black;
+  border-color: $color-black;
   font-weight: bold;
 }
 
