--- a/src/scss/06_components/navigation/global/_menu-toggle.scss
+++ b/src/scss/06_components/navigation/global/_menu-toggle.scss
@@ -1,4 +1,3 @@
-// stylelint-disable no-descending-specificity
 $-header-branding-height-desktop: 87px;
 $-menu-transition-duration: 0.3s;
 
@@ -11,6 +10,13 @@ $-menu-transition-duration: 0.3s;
   display: grid;
 }
 
+.menu-toggle-anchor,
+.menu-toggle-button {
+  grid-area: toggle;
+  grid-template-areas: 'link';
+  z-index: 2;
+}
+
 .menu-toggle-button {
   background: transparent; // Reset button styles
   border: 0 none; // Reset button styles
@@ -21,13 +27,6 @@ $-menu-transition-duration: 0.3s;
   &:focus {
     outline: 0 none;
   }
-}
-
-.menu-toggle-anchor,
-.menu-toggle-button {
-  grid-area: toggle;
-  grid-template-areas: 'link';
-  z-index: 2;
 }
 
 // When JS is enabled, switch to use button instead of anchor
@@ -65,6 +64,7 @@ $-menu-transition-duration: 0.3s;
     text-decoration: underline;
   }
 
+  // stylelint-disable no-descending-specificity
   &:focus,
   &:active,
   .menu-toggle-button:focus &,
@@ -72,6 +72,7 @@ $-menu-transition-duration: 0.3s;
     outline: 3px solid $color-black;
     outline-offset: -3px;
   }
+  // stylelint-enable no-descending-specificity
 
   &::before {
     @include pseudo-icon('menu-hamburger', 32px, currentColor, block);
@@ -81,6 +82,7 @@ $-menu-transition-duration: 0.3s;
   }
 }
 
+// stylelint-disable-next-line no-descending-specificity
 .menu-toggle__close {
   visibility: hidden;
 
@@ -135,6 +137,7 @@ $-menu-transition-duration: 0.3s;
 
   @include breakpoint($breakpoint-m) {
     --menu-max-height: calc(var(--menu-height) - var(--drupal-toolbar-height, 0px) - $-header-branding-height-desktop - 1px);
+    --menu-height: auto;
   }
 
   @include breakpoint($breakpoint-l) {
@@ -210,9 +213,10 @@ $-menu-transition-duration: 0.3s;
   & ~ .wrapper > *:not(.header), // All wrapper content except .header
   & ~ .footer {
     @include breakpoint(max-width $breakpoint-l) {
+      // stylelint-disable-next-line max-nesting-depth
       @supports not (overscroll-behavior-y: contain) {
         display: none; // Hide other content when menu is visible and overscroll-behaviour is not supported
       }
-    } // Footer
+    }
   }
 }
