UHF-6017: Use aria-current instead of custom css class

--- a/src/scss/06_components/navigation/global/_jsmenu.scss
+++ b/src/scss/06_components/navigation/global/_jsmenu.scss
@@ -171,7 +171,7 @@ $-transition-duration: 0.2s;
   text-decoration: none;
 }
 
-.jsmenu__itemlink--active {
+.jsmenu__itemlink[aria-current='page'] {
   border-color: $color-black;
   font-weight: bold;
 }
