--- a/src/scss/06_components/navigation/_branding-navigation.scss
+++ b/src/scss/06_components/navigation/_branding-navigation.scss
@@ -1,7 +1,7 @@
 $-branding-icon-size-desktop: $spacing-double;
 
 .header-branding {
-  --block-branding-height-mobile: 65px;
+  --branding-height: 65px;
   --header-branding-padding: #{$spacing};
   background-color: $color-white;
   border-bottom: 1px solid $color-black-20;
@@ -11,19 +11,20 @@ $-branding-icon-size-desktop: $spacing-double;
     '. lang lang lang lang .'
     'menu menu menu menu menu menu';
   grid-template-columns: var(--header-branding-padding) auto 1fr auto auto var(--header-branding-padding);
-  grid-template-rows: auto auto auto;
+  grid-template-rows: var(--branding-height) auto auto;
   position: fixed;
   top: 0;
   width: 100%;
   z-index: 100;
 
   @include breakpoint($breakpoint-m) {
+    --branding-height: 86px;
     --header-branding-padding: #{$spacing-and-half};
     grid-template-areas:
       '. logo . lang brand toggle .'
       'menu menu menu menu menu menu menu';
     grid-template-columns: var(--header-branding-padding) auto 1fr auto auto auto var(--header-branding-padding);
-    grid-template-rows: auto auto;
+    grid-template-rows: var(--branding-height) auto;
   }
 
   @include breakpoint($breakpoint-m) {
