--- a/src/scss/00_functions/_typography_functions.scss
+++ b/src/scss/00_functions/_typography_functions.scss
@@ -1,5 +1,10 @@
-@function get-line-height($style) {
+@function get-line-height($style, $unremify: false) {
   $-path: 'font.#{$style}';
+  $-line-height: get('#{$-path}.line-height') * get('#{$-path}.font-size');
 
-  @return get('#{$-path}.line-height') * get('#{$-path}.font-size');
+  @if $unremify {
+    @return unremify($-line-height);
+  }
+
+  @return $-line-height;
 }
