UHF-6017: UHF-5869: Add megamenu

--- a/src/scss/06_components/navigation/global/_menu-toggle.scss
+++ b/src/scss/06_components/navigation/global/_menu-toggle.scss
@@ -228,3 +228,9 @@ $-menu-transition-duration: 0.3s;
     }
   }
 }
+
+.mobile-menu {
+  @include breakpoint($breakpoint-l) {
+    display: none;
+  }
+}
