--- a/templates/misc/logo.twig
+++ b/templates/misc/logo.twig
@@ -1,23 +1,23 @@
 {% set logo = 'helsinki' %}
 {% set logo_class = 'logo__icon logo__icon--fi' %}
-{% set logo_alt = 'Helsinki' %}
+{% set logo_alt = 'Helsinki-kehystunnus' %}
 
 {% if current_langcode == 'en' %}
   {% set logo = 'helsinki' %}
   {% set logo_class = 'logo__icon logo__icon--en' %}
-  {% set logo_alt = 'Helsinki' %}
+  {% set logo_alt = 'Helsinki logo' %}
 {% endif %}
 
 {% if current_langcode == 'sv' %}
   {% set logo = 'helsinki-sv' %}
   {% set logo_class = 'logo__icon logo__icon--sv' %}
-  {% set logo_alt = 'Helsingfors' %}
+  {% set logo_alt = 'Helsingfors logo' %}
 {% endif %}
 
 {% if current_langcode == 'ru' %}
   {% set logo = 'helsinki-ru' %}
   {% set logo_class = 'logo__icon logo__icon--ru' %}
-  {% set logo_alt = 'Xeльcинки' %}
+  {% set logo_alt = 'Логотип Хельсинки' %}
 {% endif %}
 
 {% include "@hdbt/misc/icon.twig" with {icon: logo, label: logo_alt, class: logo_class} %}
