--- a/templates/block/block--mobile-navigation.html.twig
+++ b/templates/block/block--mobile-navigation.html.twig
@@ -53,35 +53,28 @@
       <div class="menu-dropdown__content" aria-labelledby="menu-description">
         <h2 class="visually-hidden" id="menu-description">{{ 'Navigation menu'|t({}, {'context': 'Mobile navigation menu description for screen readers'}) }}</h2>
 
-        {# {{ drupal_entity('block', 'language_switcher')}} #}
+        <div class="mega-and-mobilemenu">
+          {{ drupal_entity('block', 'language_switcher')}}
 
-        {{ block_content }}
+          {{ block_content }}
 
-        {# <div class="mobile-menu__footer">
-          {% set link_attributes = {
-            'class': [
-              'menu__link',
-            ],
-          } %}
-          {{ link('City of Helsinki'|t, 'https://hel.fi', link_attributes) }}
-          {% set inside_cssmenu = true %}
-          {{ drupal_entity('block', 'headertopnavigation')}}
-        </div> #}
+          <div class="jsmenu__panel-footer js-jsmenu__panel-footer">
 
-        <div class="mobile-menu" id="js-menu-fallback">
-          Mobile menu
-          <ul>
-            <li>Lorem, ipsum dolor.</li>
-            <li>Officiis, debitis voluptatem!</li>
-            <li>Nulla, debitis cumque!</li>
-            <li>Blanditiis, optio sint.</li>
-            <li>Nihil, pariatur perferendis!</li>
-            <li>Vel, deleniti earum.</li>
-            <li>Minima, earum sit?</li>
-            <li>Porro, reprehenderit error.</li>
-            <li>Quasi, officiis architecto.</li>
-            <li>Enim, quasi minima?</li>
-          </ul>
+            {% set inside_cssmenu = true %}
+            {{ drupal_entity('block', 'headertopnavigation')}}
+
+            <div class="jsmenu__logo">
+              {% set link_label %}
+                {% embed "@hdbt/misc/logo.twig" %}{% endembed %}
+              {% endset %}
+              {% set link_attributes = {
+                'class': [
+                  'jsmenu__logo-link',
+                ],
+              } %}
+              {{ link(link_label, site_front_url, link_attributes) }}
+            </div>
+          </div>
         </div>
 
         <div id="jsmenu" class="jsmenu">
