--- a/templates/navigation/menu--mobile.html.twig
+++ b/templates/navigation/menu--mobile.html.twig
@@ -101,6 +101,22 @@
     {% endif %}
   {% endmacro %}
 
+  <div class="mobile-menu-fallback" id="js-menu-fallback">
+    Mobile menu
+    <ul>
+      <li>Lorem, ipsum dolor.</li>
+      <li>Officiis, debitis voluptatem!</li>
+      <li>Nulla, debitis cumque!</li>
+      <li>Blanditiis, optio sint.</li>
+      <li>Nihil, pariatur perferendis!</li>
+      <li>Vel, deleniti earum.</li>
+      <li>Minima, earum sit?</li>
+      <li>Porro, reprehenderit error.</li>
+      <li>Quasi, officiis architecto.</li>
+      <li>Enim, quasi minima?</li>
+    </ul>
+  </div>
+
 {% else %}
   {#
     We call a macro which calls itself to render the full tree.
